@@ -2835,7 +2835,15 @@ class tx_ttnews extends tslib_pibase {
 	function initTemplate() {
 		// read template-file and fill and substitute the Global Markers
 		$templateflex_file = $this->pi_getFFvalue($this->cObj->data['pi_flexform'], 'template_file', 's_template');
-		$this->templateCode = $this->cObj->fileResource($templateflex_file?'uploads/tx_ttnews/' . $templateflex_file:$this->conf['templateFile']);
+		if ($templateflex_file) {
+			if (false === strpos($templateflex_file, '/')) {
+				$templateflex_file = 'uploads/tx_ttnews/' . $templateflex_file;
+			}
+			$this->templateCode = $this->cObj->fileResource($templateflex_file);
+		}
+		else {
+			$this->templateCode = $this->cObj->fileResource($this->conf['templateFile']);
+		}
 		$splitMark = md5(microtime(true));
 		$globalMarkerArray = array();
 		list($globalMarkerArray['###GW1B###'], $globalMarkerArray['###GW1E###']) = explode($splitMark, $this->cObj->stdWrap($splitMark, $this->conf['wrap1.']));
